--- a/research/01_basic_trails.ipynb
+++ b/research/01_basic_trails.ipynb
@@ -423,9 +423,10 @@
    "source": [
     "import requests\n",
     "import json\n",
+    "from keys import  extract_all_passages\n",
     "def generate_context(query:str, num_urls:int):\n",
     "    \n",
-    "    response= requests.post(\"https://qagen.paperbot.ai/extract_all_passages/\", json={\n",
+    "    response= requests.post(extract_all_passages, json={\n",
     "                                                                                    \"query\": query,\n",
     "                                                                                    \"num_urls\": int(num_urls),\n",
     "                                                                                    } )\n",
@@ -635,7 +636,7 @@
     }
    ],
    "source": [
-    "response= requests.post(\"https://qagen.paperbot.ai/extract_all_passages/\", json={\n",
+    "response= requests.post(extract_all_passages, json={\n",
     "                                                                                    \"query\": \"best cat ear headphones\",\n",
     "                                                                                    \"num_urls\": int(1),\n",
     "                                                                                    } )\n",
