--- a/research/02_KB_generation_new.ipynb
+++ b/research/02_KB_generation_new.ipynb
@@ -34,9 +34,10 @@
    "source": [
     "import requests\n",
     "import json\n",
+    "from keys import  extract_all_passages\n",
     "def generate_context(query:str, num_urls:int):\n",
     "    \n",
-    "    response= requests.post(\"https://qagen.paperbot.ai/extract_all_passages/\", json={\n",
+    "    response= requests.post(extract_all_passages, json={\n",
     "                                                                                    \"query\": query,\n",
     "                                                                                    \"num_urls\": int(num_urls),\n",
     "                                                                                    } )\n",
